@@ -24,7 +24,7 @@
 /*
  * @test
  * @bug      8250768 8261976 8277300 8282452 8287597 8325325 8325874 8297879
- *           8331947 8281533 8343239 8318416
+ *           8331947 8281533 8343239 8318416 8346109
  * @summary  test generated docs for items declared using preview
  * @library  /tools/lib ../../lib
  * @modules jdk.javadoc/jdk.javadoc.internal.tool
@@ -295,5 +295,55 @@ public class TestPreview extends JavadocTester {
 
         checkOutput("m/module-summary.html", true,
                     "Indirect exports from the <code>java.base</code> module are");
+    }
+
+    // Test for JDK hidden option to add an entry for a non-preview element
+    // in the preview page based on the presence of a javadoc tag.
+    @Test
+    public void testPreviewNoteTag(Path base) throws IOException {
+        Path src = base.resolve("src");
+        tb.writeJavaFiles(src, """
+                package p;
+                import jdk.internal.javac.PreviewFeature;
+
+                /**
+                 * Preview feature
+                 */
+                @PreviewFeature(feature= PreviewFeature.Feature.TEST)
+                public interface CoreInterface {
+                }
+                """, """
+                package p;
+
+                 /**
+                  * Non preview feature.
+                  * {@previewNote 2147483647 Preview API Note}
+                  */
+                 public interface NonPrevieFeature {
+                 }
+                """);
+        javadoc("-d", "out-preview-note-tag",
+                "--add-exports", "java.base/jdk.internal.javac=ALL-UNNAMED",
+                "-tag", "previewNote:a:Preview Note:",
+                "--preview-note-tag", "previewNote",
+                "--source-path",
+                src.toString(),
+                "p");
+        checkExit(Exit.OK);
+
+        checkOutput("preview-list.html", true,
+                """
+                    <h2 title="Contents">Contents</h2>
+                    <ul class="contents-list">
+                    <li id="contents-preview-api-notes"><a href="#preview-api-notes">Preview API Notes</a></li>
+                    <li id="contents-interface"><a href="#interface">Interfaces</a></li>""",
+                """
+                    <div class="caption"><span>Elements containing Preview Notes</span></div>""",
+                """
+                    <div class="col-summary-item-name even-row-color preview-api-notes preview-api-notes-tab1\
+                    "><a href="p/NonPrevieFeature.html" title="interface in p">p.NonPrevieFeature</a></div>
+                    <div class="col-second even-row-color preview-api-notes preview-api-notes-tab1">Test Feature</div>
+                    <div class="col-last even-row-color preview-api-notes preview-api-notes-tab1">
+                    <div class="block">Non preview feature.</div>""");
     }
 }
